[tool.poetry]
name = "example-app"
version = "0.1.0"
description = ""
authors = ["Amy Gori <amydgori@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django-registration-redux = "^2.8"
django-extensions = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
